{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 146,
  "lineage": "f2b53eb1-85e5-f7a6-6fcb-f5ebdc9f2147",
  "resources": [
    {
      "module": "module.ec2_collection",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mini-proj-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095413544ce52437d",
            "arn": "arn:aws:ec2:us-west-2:199174511003:instance/i-0dc73db11193db97c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc73db11193db97c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altSchool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cb76fea21d75978f",
            "private_dns": "ip-10-0-7-185.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.185",
            "public_ip": "35.87.253.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0398de60a514b2f50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e78757205b2ca1c7",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ceb8fcc79cd6610"
            ]
          },
          "dependencies": [
            "module.ec2_collection.aws_security_group.sg_for_mp_instances"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095413544ce52437d",
            "arn": "arn:aws:ec2:us-west-2:199174511003:instance/i-05ee559b3ff443210",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ee559b3ff443210",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altSchool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0459c1ec0e2a2ba88",
            "private_dns": "ip-10-0-15-251.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.15.251",
            "public_ip": "35.90.254.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0082f090875612d96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e78757205b2ca1c7",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ceb8fcc79cd6610"
            ]
          },
          "dependencies": [
            "module.ec2_collection.aws_security_group.sg_for_mp_instances"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095413544ce52437d",
            "arn": "arn:aws:ec2:us-west-2:199174511003:instance/i-0ee28fd8279a21193",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee28fd8279a21193",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altSchool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0904c92c7cd56e194",
            "private_dns": "ip-10-0-0-226.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.226",
            "public_ip": "54.149.104.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0accccae0389972c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e78757205b2ca1c7",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ceb8fcc79cd6610"
            ]
          },
          "dependencies": [
            "module.ec2_collection.aws_security_group.sg_for_mp_instances"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_collection",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_mp_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:199174511003:security-group/sg-07ceb8fcc79cd6610",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-07ceb8fcc79cd6610",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "instance",
            "name_prefix": "",
            "owner_id": "199174511003",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f1d501c526592c8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.mp_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:loadbalancer/app/mp-alb/866bfcf6c45ce964",
            "arn_suffix": "app/mp-alb/866bfcf6c45ce964",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mp-alb-1185103646.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:loadbalancer/app/mp-alb/866bfcf6c45ce964",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07ceb8fcc79cd6610"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0336419c4a29b78a3"
              },
              {
                "subnet_id": "subnet-0e78757205b2ca1c7"
              }
            ],
            "subnets": [
              "subnet-0336419c4a29b78a3",
              "subnet-0e78757205b2ca1c7"
            ],
            "vpc_id": "vpc-04f1d501c526592c8",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances"
          ]
        }
      ]
    },
    {
      "module": "module.mp_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Altschool-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:listener/app/mp-alb/866bfcf6c45ce964/19942f866264edd4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:listener/app/mp-alb/866bfcf6c45ce964/19942f866264edd4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:loadbalancer/app/mp-alb/866bfcf6c45ce964",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances",
            "module.mp_elb.aws_lb.mp_alb",
            "module.mp_elb.aws_lb_target_group.test"
          ]
        }
      ]
    },
    {
      "module": "module.mp_elb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "Altschool-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:listener-rule/app/mp-alb/866bfcf6c45ce964/19942f866264edd4/feee0ed4e892c88b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:listener-rule/app/mp-alb/866bfcf6c45ce964/19942f866264edd4/feee0ed4e892c88b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:listener/app/mp-alb/866bfcf6c45ce964/19942f866264edd4",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances",
            "module.mp_elb.aws_lb.mp_alb",
            "module.mp_elb.aws_lb_listener.Altschool-listener",
            "module.mp_elb.aws_lb_target_group.test"
          ]
        }
      ]
    },
    {
      "module": "module.mp_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
            "arn_suffix": "targetgroup/mp-target-group/98689c6a2338de64",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04f1d501c526592c8"
          }
        }
      ]
    },
    {
      "module": "module.mp_elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64-20230205101310675600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
            "target_id": "i-0dc73db11193db97c"
          },
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances",
            "module.mp_elb.aws_lb_target_group.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64-20230205101310647900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
            "target_id": "i-05ee559b3ff443210"
          },
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances",
            "module.mp_elb.aws_lb_target_group.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64-20230205101310633400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:199174511003:targetgroup/mp-target-group/98689c6a2338de64",
            "target_id": "i-0ee28fd8279a21193"
          },
          "dependencies": [
            "module.ec2_collection.aws_instance.mini-proj-instances",
            "module.ec2_collection.aws_security_group.sg_for_mp_instances",
            "module.mp_elb.aws_lb_target_group.test"
          ]
        }
      ]
    }
  ]
}